--- a/package.json
+++ b/package.json
@@ -1,41 +1,28 @@
 {
-  "name": "vpv-shopify-base",
-  "version": "0.0.1",
-  "description": "Base Shopify theme and initial packages",
+  "name": "shopify-base",
+  "version": "1.0.0",
+  "description": "V+V Base Shopify Theme",
   "main": "index.js",
+  "dependencies": {
+    "extract-text-webpack-plugin": "^1.0.1"
+  },
+  "devDependencies": {
+    "node-sass": "^3.12.5",
+    "sass-loader": "^4.0.2",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
+  },
   "scripts": {
-    "test": "eslint src/js/**/*.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dnordby/shopify-base.git"
   },
-  "author": "Daniel Nordby <daniel@verbalplusvisual.com>",
-  "license": "MIT",
+  "author": "daniel@verbalplusvisual.com",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/dnordby/shopify-base/issues"
   },
-  "homepage": "https://github.com/dnordby/shopify-base#readme",
-  "devDependencies": {
-    "bootstrap": "3.3.7",
-    "bower": "^1.7.9",
-    "browserify": "^13.0.1",
-    "browserify-shim": "^3.8.12",
-    "eslint": "^3.7.1",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-if": "^2.0.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-modernizr": "^1.0.0-alpha",
-    "gulp-newer": "^1.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "2.0.0-alpha",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1",
-    "slick-carousel": "^1.6.0"
-  }
+  "homepage": "https://github.com/dnordby/shopify-base#readme"
 }
