--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "V+V Base Shopify Theme",
   "main": "entry.js",
   "dependencies": {
-    "extract-text-webpack-plugin": "^1.0.1"
+    "bootstrap": "^3.3.7",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "node-sass": "^3.12.5",
