--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "jquery": "^3.1.1"
   },
   "devDependencies": {
+    "css-loader": "^0.26.0",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
