--- a/package.json
+++ b/package.json
@@ -4,17 +4,42 @@
   "description": "V+V Base Shopify Theme",
   "main": "entry.js",
   "dependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "autoprefixer": "^7.1.2",
     "bootstrap": "^3.3.7",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "jquery": "^3.1.1"
+    "css": "^2.2.1",
+    "expect": "^21.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "gulp": "^3.9.1",
+    "import-loader": "^1.0.1",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.1.1",
+    "lodash.throttle": "^4.1.1",
+    "postcss-loader": "^2.0.6",
+    "prefixes": "^1.0.1",
+    "sass": "^1.0.0-beta.2",
+    "sass-mq": "^3.3.2",
+    "scss": "^0.2.4",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
-    "css-loader": "^0.26.0",
-    "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "autoprefixer": "^7.1.2",
+    "autoprefixer-loader": "^3.2.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-scss-variables": "^0.2.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
