--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "V+V Base Shopify Theme",
   "main": "entry.js",
   "dependencies": {
+    "css-raw-loader": "^0.1.2",
     "jquery": "^3.2.1"
   },
   "devDependencies": {
@@ -14,9 +15,11 @@
     "babel-register": "^6.24.1",
     "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
+    "css-to-string-loader": "^0.1.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "parallelshell": "^3.0.2",
+    "path": "^0.12.7",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
