--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "node-sass": "^4.7.2",
     "parallelshell": "^3.0.2",
     "path": "^0.12.7",
+    "postcss-load-config": "^1.2.0",
+    "postcss-loader": "^2.0.10",
+    "postcss-plugin": "^1.0.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
